# gertjanassies_dev-yew

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  build.rs  create_result_image.py  docker-compose.yml  index.html  index.scss  run_with_auth.sh
.github/workflows/: build-and-deploy.yml
backend/: Cargo.toml  README.md
backend/src/: redis_client.rs
content/pages/: about.md
content/posts/: 210609_practical_recursion_in_elixir.md  210610_TOTP_Exercise.md  210619_online_meetings.md  210813_smaller_docker_containers.md  211029_too_many_authenticating_failures.md  211105_why_i_sold_my_vanmoof.md  220528_optional_go.md  220801_online_meetings2.md  220918_online_meetings3.md  221102_eks_fine_grained_access.md  230201_an_opionated_terminal.md  230627_new_blog.md  230714_implement_pageviews.md  231010_redis_migration.md  240101_rust_on_esp32.md  240125_rust_on_esp32_2_hardware.md  250114_inky_impressions.md  250429_vibe_coding.md  251003_rust_on_esp32_2_5_embassy_no_std.md  251009_acronyms_wifi_mqtt_ocpp.md  251202_trinkey_keep_alive.md  260213_another_approach_to_exceptions_in_java.md  260310_ai_in_electronics_design.md
deploy/: Dockerfile  Dockerfile.ci  ENV_VARIABLES.md  build_local.sh  nginx.conf  supervisord.conf
frontend/: Cargo.toml  IMAGE_COMPONENT_DOCS.md  Trunk.toml  build.rs  index.html  index.scss
frontend/src/: app.rs  components.rs  main.rs  markdown.rs  traits.rs
frontend/src/components/: aboutpage.rs  auth_wrapper.rs  blogpage.rs  certifications.rs  footer.rs  homepage.rs  image.rs  notfoundpage.rs  onlineplaces.rs  page.rs  page_stats_display.rs  page_stats_display_backup.rs  posts.rs  technologies.rs
frontend/src/hooks/: mod.rs  use_document_title.rs  use_meta_tags.rs
frontend/static/js/: copy-code.js  prism.js
frontend/static/pages/: about.md  blog.md  home.md
frontend/static/posts/: 210609_practical_recursion_in_elixir.md  210610_TOTP_Exercise.md  210619_online_meetings.md  210813_smaller_docker_containers.md  220528_optional_go.md  220801_online_meetings2.md  220918_online_meetings3.md  221102_eks_fine_grained_access.md  230201_an_opionated_terminal.md  230714_implement_pageviews.md  231010_redis_migration.md  240101_rust_on_esp32.md  240125_rust_on_esp32_2_hardware.md  240226_rust_on_esp32_3_mqtt.md  240830_simple_ai_cmdline.md  250114_inky_impressions.md  251003_rust_on_esp32_2_5_embassy_no_std.md  251009_acronyms_wifi_mqtt_ocpp.md
implementation_details/: IMPLEMENTATION_SUMMARY.md  REDIS_CLIENT.md  SERVER_IMPLEMENTATION.md  woRKSPACE.md
meta-gen/: Cargo.toml
meta-gen/src/: main.rs
scripts/: run_local.sh  validate-ci.sh
server/: Cargo.toml  Dockerfile  README.md
server/src/: main.rs  redis_client.rs
src/: app.rs  components.rs  reading_time.rs
src/components/: aboutpage.rs  blogpage.rs  footer.rs  general.rs  header.rs  homepage.rs  markdown.rs  page.rs  posts.rs
static/js/: katex-init.js  prism.js
static/pages/: about.md  home.md
static/posts/: 210609_practical_recursion_in_elixir.md  210610_TOTP_Exercise.md  210619_online_meetings.md  210813_smaller_docker_containers.md  211029_too_many_authenticating_failures.md  211105_why_i_sold_my_vanmoof.md  220528_optional_go.md  220801_online_meetings2.md  220918_online_meetings3.md  221102_eks_fine_grained_access.md  230201_an_opionated_terminal.md  230627_new_blog.md  230714_implement_pageviews.md  231010_redis_migration.md  240101_rust_on_esp32.md  240125_rust_on_esp32_2_hardware.md  240226_rust_on_esp32_3_mqtt.md  240830_simple_ai_cmdline.md  250114_inky_impressions.md  250429_vibe_coding.md
static/styles/: color-palette.css  prism-one-dark.css
tools/: serve_dist.py
