[workspace]
members = [
    "frontend",
    "server",
]
default-members = ["frontend", "server"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
redis = { version = "0.32.6", features = ["tokio-comp", "connection-manager"] }
