[workspace]
members = [
    "frontend",
    "backend",
    "meta-gen",
]
default-members = ["frontend", "backend", "meta-gen"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
redis = { version = "1.0.5", features = ["tokio-comp", "connection-manager"] }
