[package]
name = "page-stats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env"] }
