[package]
name = "gertjanassies_dev-yew"
version = "0.1.0"
edition = "2021"
description = "Rust webasm trunk blog using yew"
readme = "../README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
markdown-frontmatter = { version="0.4.0", features=["yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3", features = ["console", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
yew = { version="0.21", features=["csr"] }
pulldown-cmark = "0.11"
yew-router = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redis = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
