[package]
name = "page-stats-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
